tests/ui/parser/const-block-items/macro-stmt.stderr
error: expected expression, found ``
  --> $DIR/macro-stmt.rs:7:9
   |
LL |         $item
   |         ^^^^^ expected expression
...
LL |     foo!(const {});
   |     -------------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

